  - the frequency and runway heading/length given in cup files are now displayed
  - use runway heading and length contained in cup waypoint files
  - for WELT2000 generated winpilot waypoint files (.dat) use runway heading
* task
  - added BGA start point sector
  - configurable alternate sorting 
    - by arrival altitude
    - along task direction
    - along home direction

Version 6.0.5 - not yet released
* devices:
  - EWMicroRecorder: fix hang during task declaration
* Android
  - fix bitmap loading on Samsung Galaxy Tab
  - show Bluetooth device names in configuration dialog
  - larger default fonts
  - improved airspace rendering

Version 6.0.4 - 2011/02/19
* devices
  - EWMicroRecorder: parse PGRMZ as altitude above 1013.25 hPa
  - FlymasterF1: convert pressure to altitude
  - FlymasterF1: don't override the baro altitude of the primary device
  - LX: parse LXWP0 as altitude above 1013.25 hPa
  - Zander: PZAN1 contains QNH altitude
  - Zander: verify checksum
  - don't force cruise mode when no Vega/B50 is present
* user interface
  - prevent potential crash while using flarm radar dialogs
  - improve behaviour if "circling zoom" is disabled
  - vario: fix circling mode display
* map
  - enable terrain and topology by default
  - Terrain: load fewer raster tiles on Altair
* task
  - abort: for non-final glide options, don't prefer airports
  - task manager: reduce memory usage
  - olc: DHV-XC contest optimisation
  - olc: SIS-AT 2011 contest optimisation
* configuration
  - don't forget the home airport after a configuration change
* Android
  - device: support NMEA over Bluetooth RFCOMM
  - more pause/resume crash fixes
  - don't process hardware keys twice
  - fix bitmap loading on Android 2.3

Version 6.0.3 - 2011/02/02
* devices
  - EW, Volkslogger: restart I/O thread after declaration failure
  - CAI302: check for I/O errors during declaration
  - Volkslogger: enable task declaration
  - Condor: fixed wind direction processing
* user interface